optimized loading of user sync urls for custom vast with review feedbacks